--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.btn{height:50px; width:150px;
+  font-size: 18px;
+  color:#ffffff;
+  background-color: dodgerblue;
+  border:none;
+  padding:5px;
+  border-radius: 5px;
+}
+
+.quote-box{
+  padding:15px 30px 15px 30px;
+  margin:40px auto;
+  max-width:500px;
+  max-height:300px;
   text-align: center;
+  background-color: #ffffff;
+  border-radius: 5px;
+  } 
+  
+  p{
+    font-family:'Segoe UI';
+  font-weight:400;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.my-quote{
+  font-family:'Segoe UI';
+font-weight:400;
+font-size: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: indigo;  margin:auto;
 }
